LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Remind__c.field-meta.xml
<CustomField>
    <fullName>Remind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remind</label>
    <type>Checkbox</type>
</CustomField>