LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Requires_XSell__c.field-meta.xml
<CustomField>
    <fullName>Requires_XSell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AUTO - This box will be checked by OPPYCLOSED_Trigger if the Opportunity *does not* contain additional accounts / transactions for AutoRec. If checked, then at &quot;Pending Documents&quot; a cross sell Opportunity will be created to be managed by CS / Setup / Sales.</description>
    <label>Requires XSell</label>
    <type>Checkbox</type>
</CustomField>