LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Responsiveness_Rate__c.field-meta.xml
<CustomField>
    <fullName>Responsiveness_Rate__c</fullName>
    <label>Responsiveness Rate</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>