LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <description>AUTO - Delivered from the Opportunity by the OPPYCLOSED apex.</description>
    <inlineHelpText>The Sales Engineer assigned to the original Opportunity</inlineHelpText>
    <label>Sales Engineer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>