LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Secondary_Setup_Lead_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Setup_Lead_Current_User__c</fullName>
    <description>Used in views to show customer setups where the current user is a secondary setup lead.</description>
    <formula>IF( Secondary_Setup_Lead__c =  $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Setup Lead Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>