LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/SETUP_Documents_Obtained__c.field-meta.xml
<CustomField>
    <fullName>SETUP_Documents_Obtained__c</fullName>
    <description>AUTO - Documents Obtained value from the Opportunity.</description>
    <formula>TEXT(Opportunity__r.SETUP_Documents_Obtained__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the OPPORTUNITY. States whether or not documents were received by the time of Closed Won.</inlineHelpText>
    <label>Setup Documents Obtained</label>
    <type>Text</type>
</CustomField>