LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/SETUP_Groups_to_Train__c.field-meta.xml
<CustomField>
    <fullName>SETUP_Groups_to_Train__c</fullName>
    <description>AUTO - Groups to Train from the Opportunity.</description>
    <formula>TEXT(Opportunity__r.SETUP_Groups_to_Train__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the OPPORTUNITY. The original estimated number of groups to train.</inlineHelpText>
    <label>Groups to Train</label>
    <type>Text</type>
</CustomField>