LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Setup_Link_Complete__c.field-meta.xml
<CustomField>
    <fullName>Setup_Link_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-02-06 - N. Ehrmann - MANUAL - Setup Team Users check this box to indicate that the Setup Link has been completed, which will cause a date stamp through Process Builder.</description>
    <inlineHelpText>Check this box to indicate that the Setup Link has been completed by the customer.</inlineHelpText>
    <label>Setup Link Complete</label>
    <type>Checkbox</type>
</CustomField>