LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Setup_Link_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Setup_Link_Complete_Date__c</fullName>
    <description>2020-02-06 - N. Ehrmann - AUTO - Date stamped by Process Builder when the Setup Link Complete checkbox is checked.</description>
    <label>Setup Link Complete Date</label>
    <type>Date</type>
</CustomField>