LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Setup_Link_Send_By__c.field-meta.xml
<CustomField>
    <fullName>Setup_Link_Send_By__c</fullName>
    <defaultValue>TODAY() + 1</defaultValue>
    <label>Setup Link Send By</label>
    <type>Date</type>
</CustomField>