LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Setup_Link_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Setup_Link_Sent_On__c</fullName>
    <label>Setup Link Sent On</label>
    <type>Date</type>
</CustomField>