LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/SETUP_Matrix_Rating__c.field-meta.xml
<CustomField>
    <fullName>SETUP_Matrix_Rating__c</fullName>
    <description>AUTO - Setup Matrix Rating from the Opportunity.</description>
    <formula>TEXT(Opportunity__r.SETUP_Matrix_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the OPPORTUNITY</inlineHelpText>
    <label>Setup Matrix Rating</label>
    <type>Text</type>
</CustomField>