LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Setup_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Setup_Subscription_Start_Date__c</fullName>
    <description>2020-02-06 - N. Ehrmann - MANUAL - The start date of the paid subscription for the customer, after free months have passed.</description>
    <inlineHelpText>The start date of the PAID subscription, after free months have passed.</inlineHelpText>
    <label>Setup Subscription Start Date</label>
    <type>Date</type>
</CustomField>