LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Setup_Time__c.field-meta.xml
<CustomField>
    <fullName>Setup_Time__c</fullName>
    <inlineHelpText>Any roadblocks? Backlog reason?</inlineHelpText>
    <label>Setup Time</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>