LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/SETUP_Timeline_Estimate__c.field-meta.xml
<CustomField>
    <fullName>SETUP_Timeline_Estimate__c</fullName>
    <description>AUTO - Setup Timeline Estimate from the Opportunity.</description>
    <formula>Opportunity__r.SETUP_Timeline_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the OPPORTUNITY. Based on Setup Matrix Rating.</inlineHelpText>
    <label>Timeline Estimate</label>
    <type>Text</type>
</CustomField>