LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/SSO__c.field-meta.xml
<CustomField>
    <fullName>SSO__c</fullName>
    <formula>TEXT(Account__r.SSO__c)</formula>
    <inlineHelpText>Set on the Account level.</inlineHelpText>
    <label>SSO</label>
    <type>Text</type>
</CustomField>