LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Subscription_Seats__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Seats__c</fullName>
    <formula>Opportunity__r.Subscription_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>