LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <formula>Opportunity__r.Subscription_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>