LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Subscription_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Month__c</fullName>
    <formula>Account__r.Subscription_Start_Month__c</formula>
    <inlineHelpText>Set on the Account level.</inlineHelpText>
    <label>Subscription Start Month</label>
    <type>Date</type>
</CustomField>