LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Subtasks__c.field-meta.xml
<CustomField>
    <fullName>Subtasks__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO -  A rollup of all subtasks.</description>
    <label>Subtasks</label>
    <summaryForeignKey>Customer_Setup_Task__c.Customer_Setup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>