LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Support_User__c.field-meta.xml
<CustomField>
    <fullName>Support_User__c</fullName>
    <label>Support User</label>
    <type>Email</type>
</CustomField>