LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Team_Training_By__c.field-meta.xml
<CustomField>
    <fullName>Team_Training_By__c</fullName>
    <label>Team Training By</label>
    <type>Date</type>
</CustomField>