LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Tier_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Tier_Playbook__c</fullName>
    <formula>TEXT(Account__r.Tier_Playbook__c)</formula>
    <inlineHelpText>Set on the account level.</inlineHelpText>
    <label>Tier Playbook</label>
    <type>Text</type>
</CustomField>