LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/TLC_ID__c.field-meta.xml
<CustomField>
    <fullName>TLC_ID__c</fullName>
    <formula>Account__r.TLC_ID__c</formula>
    <inlineHelpText>Set on the account level.</inlineHelpText>
    <label>TLC ID</label>
    <type>Text</type>
</CustomField>