LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/TLC_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>TLC_ID_Number__c</fullName>
    <label>TLC ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>