LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Transaction_Matching__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Matching__c</fullName>
    <description>AUTO - Whether or not there is any AutoRec included in the deal and implementation.</description>
    <formula>IF(
   DATEVALUE(CreatedDate) &lt; DATE(2020,10,1),   
   Opportunity__r.Transaction_Matching_Amount__c &gt; 0,
   True
)

/* in July 2020, there were pricing changes so that AutoRec */
/* is included on ALL DEALS                                 */
/* after a 3 month grace, this evaluates to TRUE on all     */
/* setup records                                            */</formula>
    <inlineHelpText>Controlled on the opportunity level.</inlineHelpText>
    <label>AutoRec</label>
    <type>Checkbox</type>
</CustomField>