LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Transfer_to_AM_By__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_AM_By__c</fullName>
    <label>Transfer to AM By</label>
    <type>Date</type>
</CustomField>