LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Transferred_to_AM_On__c.field-meta.xml
<CustomField>
    <fullName>Transferred_to_AM_On__c</fullName>
    <label>Transferred to AM On</label>
    <type>Date</type>
</CustomField>