LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Win_Details__c.field-meta.xml
<CustomField>
    <fullName>Win_Details__c</fullName>
    <description>AUTO - Populated by SETUP_BeforeInsert. The Win Details from the Account at the time that the Opportunity was Closed Won. If these are updated afterwards, they will not be delivered to the Customer Setup.</description>
    <label>Win Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>