LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Workflow_Seats__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Seats__c</fullName>
    <formula>Opportunity__r.Workflow_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>