LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/AM_Hand_Off_Notes_Communincation_Prefer.validationRule-meta.xml
<ValidationRule>
    <fullName>AM_Hand_Off_Notes_Communincation_Prefer</fullName>
    <active>false</active>
    <description>SF-85: AM hand off notes are required before completing setup. If the Status is &apos;Setup Complete&apos;, all fields in the AM Hand Off Notes are required.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Optimization&quot;), 
   ISBLANK( Communication_Preference__c)
)</errorConditionFormula>
    <errorDisplayField>Communication_Preference__c</errorDisplayField>
    <errorMessage>The field is required upon customer setup completion. If inapplicable, please type &apos;N/A&apos; or  &apos;None&apos;.</errorMessage>
</ValidationRule>