LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Cannot_Rollback_Stage_FIELD.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Rollback_Stage_FIELD</fullName>
    <active>true</active>
    <description>Status cannot be moved backward. Users are exempted by the &quot;Setup Validation Override&quot; checkbox on the User record or in the list of names at the bottom of the rule.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   NOT($User.Setup_Validation_Override__c),
   NOT($User.ProfileId = &quot;00e41000001Ceym&quot;),/* System Admin */
   NOT($User.ProfileId = &quot;00e41000000FtvF&quot;),/* Sales Manager */
   CASE(Status__c, 
      &quot;Send Setup Link&quot;,       1, 
      &quot;Launch Call&quot;,           2, 
      &quot;Pending Documentation&quot;, 3, 
      &quot;Mapping Preparation&quot;,   4, 
      &quot;Mapping Review&quot;,        5, 
      &quot;Initial Setup&quot;,         6, 
      &quot;Admin Training&quot;,        7, 
      &quot;Team Training&quot;,         8, 
      &quot;Post Setup Check-In&quot;,   9, 
      &quot;Pending Optimization&quot;, 10, 
      &quot;Transferred to AM&quot;,    11, 
      &quot;Setup Complete&quot;,       12,
      0) 
   &lt; 
   CASE(PRIORVALUE(Status__c) , 
      &quot;Send Setup Link&quot;,       1, 
      &quot;Launch Call&quot;,           2, 
      &quot;Pending Documentation&quot;, 3, 
      &quot;Mapping Preparation&quot;,   4, 
      &quot;Mapping Review&quot;,        5, 
      &quot;Initial Setup&quot;,         6, 
      &quot;Admin Training&quot;,        7, 
      &quot;Team Training&quot;,         8, 
      &quot;Post Setup Check-In&quot;,   9, 
      &quot;Pending Optimization&quot;, 10, 
      &quot;Transferred to AM&quot;,    11, 
      &quot;Setup Complete&quot;,       12,
      0)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Roll-back of statuses is not allowed. Please contact your manager if roll-back is necessary.</errorMessage>
</ValidationRule>