LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Due_Dates_Documents.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Dates_Documents</fullName>
    <active>true</active>
    <description>SF-85: Documents Due By field required before entering the Pending Documentation status.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
   ISBLANK(Documents_Due_By__c)
)</errorConditionFormula>
    <errorDisplayField>Documents_Due_By__c</errorDisplayField>
    <errorMessage>Documents due date is required.</errorMessage>
</ValidationRule>