LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Due_Dates_Initial_Setup.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Dates_Initial_Setup</fullName>
    <active>true</active>
    <description>SF-85: Initial Setup Due By field required before entering the Pending Documentation status.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
   ISBLANK(Initial_Setup_By__c)
)</errorConditionFormula>
    <errorDisplayField>Initial_Setup_By__c</errorDisplayField>
    <errorMessage>Initial setup due date is required.</errorMessage>
</ValidationRule>