LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Due_Dates_Launch_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Dates_Launch_Call</fullName>
    <active>true</active>
    <description>SF-85: Launch Call Due By field required before entering the Pending Documentation status.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
   ISBLANK(Launch_Call_By__c)
)</errorConditionFormula>
    <errorDisplayField>Launch_Call_By__c</errorDisplayField>
    <errorMessage>Launch call due date  is required.</errorMessage>
</ValidationRule>