LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Due_Dates_Mapping_Prep.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Dates_Mapping_Prep</fullName>
    <active>true</active>
    <description>SF-85: Mapping Preparation Due By field required before entering the Pending Documentation status.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
   ISBLANK(Mapping_Preparation_By__c)
)</errorConditionFormula>
    <errorDisplayField>Mapping_Preparation_By__c</errorDisplayField>
    <errorMessage>Mapping preparation due date is required.</errorMessage>
</ValidationRule>