LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Due_Dates_Mapping_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Dates_Mapping_Review</fullName>
    <active>true</active>
    <description>SF-85: Mapping Review Due By field required before entering the Pending Documentation status.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
   ISBLANK(Mapping_Review_By__c)
)</errorConditionFormula>
    <errorDisplayField>Mapping_Review_By__c</errorDisplayField>
    <errorMessage>Mapping review due date is required.</errorMessage>
</ValidationRule>