LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Due_Dates_Optimization_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Dates_Optimization_Call</fullName>
    <active>true</active>
    <description>SF-85: Optimization call due by field required before entering the Pending Documentation status.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
   ISBLANK(Optimization_Call_By__c)
)</errorConditionFormula>
    <errorDisplayField>Optimization_Call_By__c</errorDisplayField>
    <errorMessage>Optimization call due date is required.</errorMessage>
</ValidationRule>