LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Due_Dates_Post_Setup_Checkin.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Dates_Post_Setup_Checkin</fullName>
    <active>true</active>
    <description>SF-85: Post-setup checking due by field required before entering the Pending Documentation status.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
   ISBLANK(Post_Setup_Check_In_By__c)
)</errorConditionFormula>
    <errorDisplayField>Post_Setup_Check_In_By__c</errorDisplayField>
    <errorMessage>Post-setup checking due date is required.</errorMessage>
</ValidationRule>