LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/validationRules/Due_Dates_Team_Training.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Dates_Team_Training</fullName>
    <active>true</active>
    <description>SF-85: Team Training Due By field required before entering the Pending Documentation status.</description>
    <errorConditionFormula>AND(
   ISBLANK(Primary_Setup__c),
   ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
   ISBLANK(Team_Training_By__c)
)</errorConditionFormula>
    <errorDisplayField>Team_Training_By__c</errorDisplayField>
    <errorMessage>Team training due date is required.</errorMessage>
</ValidationRule>